[package]
name = "py-randomprime"
version = "0.1.0"
edition = "2018"

[dependencies]
memmap = "0.7"
randomprime = { path = "randomprime" }
dol_symbol_table = { path = "randomprime/generated/dol_symbol_table" }

[lib]
name = "py_randomprime"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "abi3"]